CheckoutMessages and FreeShippingPromo modules are done

--- a/app/code/Macademy/JsFun/view/frontend/templates/vue-test.phtml
+++ b/app/code/Macademy/JsFun/view/frontend/templates/vue-test.phtml
@@ -11,7 +11,7 @@ $messageViewModel = $block->getData('message_view_model');
     {
         "#vue-test": {
             "Macademy_JsFun/js/vue-test": {
-                "message": "<?= str_shuffle('Declarative test') ?>"
+                "message": ""
             }
         }
     }
