--- a/app/code/Macademy/JsFun/view/frontend/layout/cms_index_index.xml
+++ b/app/code/Macademy/JsFun/view/frontend/layout/cms_index_index.xml
@@ -4,9 +4,9 @@
     <body>
         <referenceContainer name="content">
             <block name="vue.test" template="Macademy_JsFun::vue-test.phtml">
-                <arguments>
-                    <argument name="message_view_model" xsi:type="object">Macademy\JsFun\ViewModel\Message</argument>
-                </arguments>
+                <!--                <arguments>-->
+                <!--                    <argument name="message_view_model" xsi:type="object">Macademy\JsFun\ViewModel\Message</argument>-->
+                <!--                </arguments>-->
             </block>
         </referenceContainer>
     </body>
